add arrow movin

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrap">
+        <!--
         <div class="createSizeBoard">
             <h3>Розмір дошки: оберіть кількість клітин по горизонталі та по вертикалі.</h3>
             <form action="">
@@ -18,11 +19,11 @@
                 <button type="submit" class="btnDrowBoard">Кресли!</button>
             </form>
         </div>
+        -->
         <div class="board">
-            
             <div class="house"></div>
             <div class="dog"></div>
-            <div class="block"></div>
+            <!--<div class="block"></div>-->
         </div>
     </div>
     <script src="./js/main.js"></script>
