--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="board">
             <div class="house"></div>
             <div class="dog"></div>
+            <div class="cat"></div>
             <!--<div class="block"></div>-->
         </div>
     </div>
