--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="house"></div>
             <div class="cat"></div>
             <div class="dog"></div>
-            
+            <div class="atCat">
+                МЯУ!!!<br>Не треба ображати кицьку!!!<br><br>Якщо хочеш зіграти ще, онови сторінку.
+            </div>
             <!--<div class="block"></div>-->
         </div>
     </div>
